<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    tools:context=".activitys.LibraryInfoActivity">

    <data>

        <variable
            name="library"
            type="kr.hs.dgsw.libraryproject.beans.LibraryBean" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/common_start_padding"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/common_end_padding">

        <!-- 도서관 이미지와 이름을 표시할 layout -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_libraryImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_library"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{library.libraryImage}"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/library_example" />

            <View
                android:id="@+id/view_on_img"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#A0000000"
                app:layout_constraintBottom_toBottomOf="@+id/img_library" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{library.libraryName}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_library_name"
                app:layout_constraintBottom_toBottomOf="@+id/view_on_img"
                app:layout_constraintStart_toStartOf="@+id/view_on_img"
                app:layout_constraintTop_toTopOf="@id/view_on_img"
                tools:text="@string/string_libraryName_dummy" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            app:cardBackgroundColor="@color/colorBackgroundDark"
            app:cardElevation="@dimen/common_shadow_size"
            app:contentPadding="@dimen/common_start_padding"
            app:layout_constraintTop_toBottomOf="@+id/layout_libraryImg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_location_on" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{library.location}"
                        android:textSize="@dimen/text_size_library_info"
                        tools:text="@string/string_location_dummy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_closed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{library.closedDay}"
                        android:textSize="@dimen/text_size_library_info"
                        tools:text="@string/string_closedDay_dummy" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</layout>
